--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="start_onboarding_text">START</string>
     <string name="company_logo">company logo</string>
     <string name="ladies_wears">Ladies Wears</string>
+    <string name="male_wears">Male Wears</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
