adding female wears to database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string-array name="cloths">
         <item>Shirt</item>
         <item>Trouser</item>
+        <item>Complete</item>
     </string-array>
 </resources>
