--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="twitter_logo">twitter logo</string>
     <string name="facebook_logo">facebook logo</string>
     <string name="linkedin_logo">linkedin logo</string>
+    <string name="price"><u>PRICE</u></string>
 
     <string-array name="cloths">
         <item>Shirt</item>
